--- a/IBMTask/templates/index.html
+++ b/IBMTask/templates/index.html
@@ -18,7 +18,7 @@
 <div class="page-header">
     <h1>IBM Task <small></small></h1>
 </div>
-
+{{ length }}
 <!-- Gallery - START -->
 
 <div class="container">
