--- a/IBMTaskService/templates/index.html
+++ b/IBMTaskService/templates/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/css.css" />
 
     <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
@@ -23,10 +24,11 @@
 
 <div class="container">
      <h5>The following images are displayed from twitpic, You need to pull them into this website's images repo</h5>
-     <a href='/scrap'>Scrap the images from twitpic</a>
+     To Scrap the images from twitpic <a href='/scrap' class='button'>CLICK HERE</a>
+     {{ app }}
     <div class="row">
         <div class="text-center">
-            <h1>Sample Image Gallery</h1>
+            <h1>Twitpic Image Gallery</h1>
         </div>
             <div class="row">
          {% for image_url in images %}
