--- a/IBMTask/templates/index.html
+++ b/IBMTask/templates/index.html
@@ -18,13 +18,12 @@
 <div class="page-header">
     <h1>IBM Task <small></small></h1>
 </div>
-{{ length }}
 <!-- Gallery - START -->
 
 <div class="container">
     <div class="row">
         <div class="text-center">
-            <h1>Sample Image Gallery</h1>
+            <h1>Image Gallery</h1>
         </div>
  
         <h5>The following images are displayed from the image repository of this website</h2>
