--- a/IBMTask/templates/index.html
+++ b/IBMTask/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Gallery Template | PrepBootstrap</title>
+    <title>Image Gallery</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css" />
@@ -24,16 +24,8 @@
         <div class="text-center">
             <h1>Image Gallery</h1>           
         </div>
- 
-        <h5>The following images are displayed from the image repository of this website</h2>
         <div class="row">
-         {% for image in displayImages %}
-            <div class="col-md-4">
-                <div class="well">
-               <img src="data:image/{{image.file_type}};base64,{{image.image}}"/>
-                </div>
-            </div>
-            {% endfor %}
+              {{ app }}
         </div>
 
     </div>
