--- a/IBMTask/templates/gallery.html
+++ b/IBMTask/templates/gallery.html
@@ -11,6 +11,8 @@
 	}
 	#stage img{
 		position: absolute;
+		width: auto;
+		max-height: 300px;
 	}
 	#next, #previous { width: 29px; height: 43px; }
 	#previous { background: url(images/prev-button.png) top left no-repeat;}
